discussion/kv_engine/140964/140964_rev5_discussion.txt
======================================================================================================================
DESCRIPTION:

[Cleanup] Packet validator will only call DCP func on DCP conn

We don't need to add code to gracefully deal with DCP commands
being receive on non-dcp connections inside ep-engine.

Change-Id: I04e7c080484cda7aecd07aaf84a5b865dbcaf38d

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2020-11-27 11:41:42.000000000
Message: 
Uploaded patch set 5.
----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2020-11-27 11:43:47.000000000
Message: 
Patch Set 5: Code-Review+2
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-11-27 11:50:28.000000000
Message: 
Patch Set 5: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/32164/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\ep_engine.cc(6114): error C3535: cannot deduce type for "auto *" from "ConnHandler" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/32164/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/27736/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/ep_engine.cc:6114:11:
error: variable "handler" with type "auto *" has incompatible initializer of type "ConnHandler"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/27736/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/5941/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/ep_engine.cc:6114:11: error: variable "handler" with type "auto *" has incompatible initializer of type "ConnHandler" [clang-diagnostic-error]
    auto* handler = getConnHandler(cookie);
          ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/5941/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/ep_engine.cc:6114:11:
error: variable "handler" with type "auto *" has incompatible initializer of type "ConnHandler" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/5941/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/7499/ : FAILURE

Compile error at [2020-11-27T11:45:33.723Z] ../kv_engine/engines/ep/src/ep_engine.cc:6114:42:
error: unable to deduce ?auto*? from ?((EventuallyPersistentEngine*)this)->EventuallyPersistentEngine::getConnHandler(cookie)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/7499/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/7393/ : FAILURE

Compile error at [2020-11-27T11:45:42.332Z] ../kv_engine/engines/ep/src/ep_engine.cc:6114:42:
error: unable to deduce ?auto*? from ?((EventuallyPersistentEngine*)this)->EventuallyPersistentEngine::getConnHandler(cookie)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/7393/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/6465/ : FAILURE

Compile error at [2020-11-27T11:44:47.389Z] ../kv_engine/engines/ep/src/ep_engine.cc:6114:11:
error: variable "handler" with type "auto *" has incompatible initializer of type "ConnHandler"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/6465/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/7780/ : FAILURE

Compile error at [2020-11-27T11:43:43.169Z] ../kv_engine/engines/ep/src/ep_engine.cc:6114:11:
error: variable "handler" with type "auto *" has incompatible initializer of type "ConnHandler"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/7780/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/15320/ : FAILURE

Compile error at [2020-11-27T11:46:50.269Z] ../kv_engine/engines/ep/src/ep_engine.cc:6114:11:
error: variable "handler" with type "auto *" has incompatible initializer of type "ConnHandler"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/15320/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/4475/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
